feat: Melhorias no design da página inicial de login\n\n- Adicionado sistema de partículas de fundo para criar atmosfera misteriosa\n- Implementado animações suaves de transição entre telas\n- Aprimorados os efeitos visuais nos botões com hover e loading states\n- Adicionado indicador de versão no canto inferior direito\n- Melhorado o design do formulário de login por email com glassmorphism\n- Implementado feedback tátil e visual para interações do usuário\n- Aprimorada a responsividade para diferentes tamanhos de tela\n- Organizadas as animações CSS com keyframes otimizados

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <button id="email-login-show-button" class="auth-button ui-element">Login com Email</button>
                 <button id="anonymous-login-button" class="auth-button ui-element">Jogar como Visitante</button>
             </div>
+            <div id="version-info">v1.0.0</div>
         </div>
 
         <div id="email-login-screen" class="ui-screen ui-element hidden">
@@ -146,6 +147,7 @@
     <script src="visual-effects.js"></script>
     <script src="animations.js"></script>
     <script src="notifications.js"></script>
+    <script src="login-background.js"></script>
     <script src="test-debug.js"></script>
     <script src="ar-debug.js"></script>
     
