Renomear para Ghost Squad

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
     <meta charset="utf-8">
-    <title>Ghostbusters AR</title>
+    <title>Ghost Squad</title>
     <meta name="description" content="Capture fantasmas que invadiram o seu mundo.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="https://pedrabrancagames.github.io/gemini-novo/favicon.ico" type="image/x-icon">
@@ -68,7 +68,7 @@
     <!-- UI Container -->
     <div id="ui-container">
         <div id="login-screen" class="ui-screen ui-element">
-            <img id="logo" src="assets/images/logo.png" alt="Ghostbusters Logo">
+            <img id="logo" src="assets/images/logo.png" alt="Ghost Squad Logo">
             <p id="loading-info">Autenticação necessária para caçar.</p>
             <div id="auth-buttons-container">
                 <button id="google-login-button" class="auth-button ui-element">Login com Google</button>
@@ -79,7 +79,7 @@
         </div>
 
         <div id="email-login-screen" class="ui-screen ui-element hidden">
-            <img id="logo-small" src="assets/images/logo.png" alt="Ghostbusters Logo">
+            <img id="logo-small" src="assets/images/logo.png" alt="Ghost Squad Logo">
             <h2>Login com Email</h2>
             <div class="input-group">
                 <input type="email" id="email-input" placeholder="Email">
