Área administrativa concluida

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <button id="email-login-show-button" class="auth-button ui-element">Login com Email</button>
                 <button id="anonymous-login-button" class="auth-button ui-element">Jogar como Visitante</button>
             </div>
+            <div id="admin-link-container">
+                <a href="admin/" id="admin-link" class="text-button ui-element">Painel Administrativo</a>
+            </div>
             <div id="version-info">v1.0.0</div>
         </div>
 
