Corrige carregamento de localizações do Firebase e remove localizações padrão do HTML

--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
             <h2>Selecione a Área de Caça</h2>
             <p id="location-info-text">Escolha um local para começar a patrulha.</p>
             <div id="location-buttons-container">
-                <button class="location-button ui-element" data-location-name="Praça Central">Praça Central</button>
-                <button class="location-button ui-element" data-location-name="Parque da Cidade">Parque da Cidade</button>
-                <button class="location-button ui-element" data-location-name="Casa do Vô">Casa do Vô</button>
+                <!-- Localizações serão carregadas dinamicamente do Firebase -->
             </div>
             <button id="enter-button" class="action-button ui-element" disabled>Iniciar Caça</button>
         </div>
